# unique_resource

./: .clang-format  .editorconfig  .gitignore  BUILDING.MD  CMakeLists.txt  CMakePresets.json  Directory.build.props  README.md
.github/workflows/: windows-build.yml
cmake/: CPM.cmake  coverage.cmake  dev_mode.cmake  lint.cmake  lint_targets.cmake  prevent_in_source_builds.cmake  project-is-top-level.cmake  variables.cmake
include/: version.h.in
include/unique_resource/: version.h
src/: CMakeLists.txt  unique_resource.cpp
src/include/: unique_resource.h
tests/: CMakeLists.txt  main.cpp  test_test.cpp  test_unique_resource.cpp
tests/include/: gtest.h
